# SmartCrawler

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RELEASE.md  TESTING.md  VIBE.md  build.rs
.github/workflows/: ci.yml  release.yml
bindings/: ContactInfo.ts  EmploymentType.ts  EntityExtractionResult.ts  Event.ts  EventStatus.ts  ExtractedEntity.ts  JobListing.ts  LLMResponse.ts  Location.ts  NewsArticle.ts  Organization.ts  Person.ts  Price.ts  Product.ts  ProductAvailability.ts  Review.ts  SalaryPeriod.ts  SalaryRange.ts
docs/: cli-options.md  development.md  getting-started-linux.md  getting-started-macos.md  getting-started-windows.md
examples/: generate_types.rs
scripts/: release.sh
src/: bounding_box.rs  browser.rs  claude.rs  cli.rs  content.rs  crawler.rs  entities.rs  extractor.rs  generate_ts.rs  html_parser.rs  lib.rs  llm.rs  main.rs  scraper.rs  sitemap.rs  storage.rs  template_detection.rs  test_runner.rs  typescript_schema.rs  url_ranking.rs  utils.rs
test_content/: sample_large_page_with_multiple_items.html
tests/: README.md  anthropic-team-test.json  example-test.json  github-about-test.json  kin-team-test.json  openai-research-test.json  real_world_tests.rs
website/: index.html  package-lock.json
website/src/: main.js  style.css
