[package]
name = "smart-crawler"
version = "0.4.0"
edition = "2021"
authors = ["SmartCrawler Team"]
description = "A web crawler that uses WebDriver to extract and parse HTML content"
license = "MIT"
homepage = "https://github.com/pixlie/SmartCrawler"
repository = "https://github.com/pixlie/SmartCrawler"
keywords = ["crawler", "scraper", "webdriver", "html", "web"]
categories = ["command-line-utilities", "web-programming"]
readme = "README.md"

[[bin]]
name = "smart-crawler"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "SmartCrawler Team"
copyright = "2024, SmartCrawler Team"
license-file = ["LICENSE", "4"]
extended-description = """\
SmartCrawler is a web crawler that uses WebDriver to extract and parse HTML content \
from web pages. It provides structured data extraction and HTML parsing capabilities."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    [
        "target/release/smart-crawler",
        "usr/bin/",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/smart-crawler/",
        "644",
    ],
]

[package.metadata.rpm]
package = "smart-crawler"
version = "0.4.0"
release = "1"
epoch = 0
license = "MIT"
group = "Applications/Internet"
summary = "A web crawler using WebDriver"
description = """\
SmartCrawler is a web crawler that uses WebDriver to extract and parse HTML content \
from web pages."""
url = "https://github.com/brainless/SmartCrawler"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
smart-crawler = { path = "/usr/bin/smart-crawler" }

[package.metadata.wix]
upgrade-guid = "5C5C5C5C-5C5C-5C5C-5C5C-5C5C5C5C5C5C"
path-guid = "6D6D6D6D-6D6D-6D6D-6D6D-6D6D6D6D6D6D"
license = false
eula = false

[dependencies]
tokio = { version = "1.0", features = ["full"] }
scraper = "0.18"
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
fantoccini = { version = "0.22.0", default-features = false, features = [
    "rustls-tls",
] }
reqwest = { version = "0.12.20", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rustls = { version = "0.23.28", default-features = false, features = ["ring"] }
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.0"
